<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:layout_margin="10dip">
    <TextView android:id="@+id/group_type_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/group_type_label"/>
    <Spinner android:id="@+id/group_types_spinner" android:layout_height="wrap_content" 
            android:layout_width="fill_parent" android:prompt="@string/spinner_prompt"></Spinner>
    <TextView android:id="@+id/group_number_label"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/group_number_label" />
    <Spinner android:id="@+id/group_numbers_spinner" android:layout_height="wrap_content" 
        android:layout_width="fill_parent" android:prompt="@string/spinner_prompt"></Spinner>
    <TextView android:id="@+id/manager_name_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/manager_name_label"/>
<!--     <EditText android:id="@+id/manager_name_input_text"
        android:layout_width="fill_parent" android:layout_height="wrap_content"/>-->
    <Spinner android:id="@+id/managers_spinner" android:layout_height="wrap_content" 
        android:layout_width="fill_parent" android:prompt="@string/spinner_prompt"></Spinner>
    <Button android:id="@+id/save_button" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginLeft="90dip" android:layout_marginRight="90dip"
        android:text="@string/save" />
</TableLayout>
